--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -190,7 +190,7 @@ p {
 }
 
 .Insc img{
-  width: 70%;
+  width: 40%;
   border-radius: 0px;
   margin-left: auto;
   margin-right: auto;
@@ -208,7 +208,8 @@ p {
 .Insc a {
   background: rgb(0,0,0,.9);
   color: white;
-  width:70%;
+  width:50%;
+  border-radius: 10px;
 }
 
 
